# mojo-amrex

./: .gitignore  AGENTS.md  CMakeLists.txt  FUNCTION_INVENTORY.md  LICENSE  README.md  pixi.toml  run_gpu.sh
docs/: amrex-runtime-lifetime-options.md  gpu-synchronization-audit.md  implementation.md  mojo-amrex-bindings-plan.md  mojo-amrex-direct-gpu-interop.md  mojo-amrex-usage.md
examples/: heat_equation_simple.mojo  multifab_gpu.mojo  multifab_gpu_interop.mojo  multifab_mpi_exchange.mojo  multifab_smoke.mojo  multifab_smoke_apple_gpu.mojo  multifab_smoke_mojo_gpu.mojo  vertical_slice.mojo
examples/HeatEquation/: demo.ipynb  heat_equation.mojo  heat_equation_flux.mojo  heat_equation_gpu.inputs  heat_equation_gpu.mojo  heat_equation_simple.inputs  heat_equation_simple.mojo  heat_equation_vis.mojo
examples/Multifab/: compiled_parallel_for_functor.mojo  multifab.mojo  multifab_gpu.mojo  multifab_mpi.mojo
issues/: 2026-03-15-code-audit.md  Makefile  README.md  apple_silicon_zero_copy_host_buffer_gpu_repro.mojo  apple_silicon_zero_copy_host_buffer_gpu_repro_metal.m  apple_silicon_zero_copy_host_buffer_gpu_repro_metal_malloc.m  gpu-parallelfor-empty-box.md  mojo_format_codex_seatbelt_repro.c  mojo_format_seatbelt_repro.c  mojo_parameter_closure_capture_list_miscompile.md  mojo_parameter_closure_capture_list_repro.mojo  mojo_parameter_closure_capture_list_string_crash_repro.mojo  mojo_unified_closure_imported_copyable_capture_crash_repro.mojo  multifab-copy-missing-validation.md  runtime-create-state-leak.md  staged-array4-size-mismatch.md
issues/OwnedDLHandle/: BUG_REPORT.md  README.md  reproducer.mojo
issues/OwnedDLHandleAggregate/: README.md  aggregate.c  reproducer.mojo.txt
issues/bugs/: f32-reductions-float-accumulation.md  ffi-ignored-status-codes.md  growntilebox-ngrow-unvalidated.md  heat-equation-valid-box-tiling.md  parallelfor-loads-default-library.md  reduction-results-ignore-errors.md  tileview-host-access-device-memory.md
issues/closures/: associated_type_register_passable_capture.md  associated_type_register_passable_capture_repro.mojo  mojo_unified_closure_devicepassable_trait_crash.md  mojo_unified_closure_devicepassable_trait_crash_repro.mojo  mojo_unified_closure_imported_copyable_capture_crash.md
issues/closures/mojo_closure_capture_pkg_src/: __init__.mojo
issues/metal/: Makefile  apple_silicon_zero_copy_host_buffer_gpu_repro.mojo  metal_zero_copy_tests  metal_zero_copy_tests.m
issues/mojo-c-ffi-struct-by-value/: Makefile  README.md  ffi_struct_repro.c  ffi_struct_repro.mojo
mojo/amrex/: __init__.mojo  build_config.mojo  build_config.mojo.in  ffi.mojo  floating_dtype.mojo  loader.mojo  ownership.mojo  runtime.mojo
mojo/amrex/space3d/: __init__.mojo  box.mojo  boxarray.mojo  geometry.mojo  gpu.mojo  mfiter.mojo  multifab.mojo  parallelfor.mojo  parmparse.mojo  tile_loop.mojo  types.mojo
scripts/: repro_mojo_package_oom.sh
scripts/pixi/: activate-linux.sh
src/capi/: CMakeLists.txt  amrex_mojo_capi.h  boxarray.cpp  capi_internal.H  distmap.cpp  error.cpp  geometry.cpp  gpu.cpp  init.cpp  mfiter.cpp  multifab.cpp  parmparse.cpp
tests/: README.md
tests/capi/: CMakeLists.txt  runtime_multifab_test.cpp
tests/mojo/: multifab_functional_test.mojo  runtime_geometry_test.mojo
tests/smoke/: README.md
